@@ -1,5 +1,3 @@
-DIST kadu-0.6.0.1.tar.bz2 1566609 RMD160 06709d16dd84a10c917fb12ee3dd06eb4ef18879 SHA1 727c5b25b7178f8d947497182da6817c170b7d6a SHA256 5b022f3043b112bbba6115bdf2877ff01d6b3b1342d74db5977fa92b1662d68c
 DIST kadu-0.6.0.2.tar.bz2 1568547 RMD160 2e8952831cada064c1caa65b943b6e44880b39c3 SHA1 efbae7840078eab46c5ac20d6e7397cf1c1457bd SHA256 8e06b554761e39890e48ba723145d4e1e0919cc84fcd978f215a6e2a30f87bfa
-EBUILD kadu-ext_sound-0.6.0.1.ebuild 270 RMD160 966e02aeef69ae17e4c86ba054485132db7a1914 SHA1 af0e733e7cc037fe15500171828b1090c55699c8 SHA256 f5a618f1d5c69b49d2081c376811796525afcc30d6c051cf6e896ef9ddcdc002
 EBUILD kadu-ext_sound-0.6.0.2.ebuild 270 RMD160 966e02aeef69ae17e4c86ba054485132db7a1914 SHA1 af0e733e7cc037fe15500171828b1090c55699c8 SHA256 f5a618f1d5c69b49d2081c376811796525afcc30d6c051cf6e896ef9ddcdc002
-MISC ChangeLog 409 RMD160 4f75643215d2d7845d160a5b66522eeb3bc635bf SHA1 faba0541240891ad22f67fe4d3bd0e44f2229680 SHA256 8dc8a35e8a9aa54f9bc74a6dd5034b8f8d7566b686d949f27c992b81a4d3d0a9
+MISC ChangeLog 510 RMD160 cda2add9b7a623465d54e5ac0cbf1fa689b85dc9 SHA1 86d12647e70847cd909077e17829d219517b1ad1 SHA256 4deff97608039390d5623e3e3b358ce97407cc78cf2e8810d8862a061ecac0a5
