@@ -1,10 +1,0 @@
-inherit kadu
-
-MOD_DEPEND=">=net-im/kadu-sound-${MIN_REQ}"
-
-inherit kadu-module
-
-SRC_URI="http://www.kadu.net/download/stable/kadu-${K_PV}.tar.bz2"
-DESCRIPTION="Kadu module that supports playing sounds by external program"
-HOMEPAGE="http://kadu.net"
-KEYWORDS="amd64 x86"
